--- a/Event/index.html
+++ b/Event/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,7 +12,7 @@
   <body style="font-family: cursive;">
     <h1>Adding Event Listeners</h1>
     <div class="container">
-      <div class="card-add">+</div>
+      <div class="card add-card" title="Add New Card">+</div>
     </div>
   </body>
 </html>
