--- a/Event/mouse-event/index.html
+++ b/Event/mouse-event/index.html
@@ -1,13 +1,18 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <button>click</button>
-    <h1>Values of x and y</h1>
-    <script src="script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Adding Event Listeners</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="event.js" defer></script>
+  </head>
+  <body style="font-family: cursive;">
+    <h1>Adding Event Listeners</h1>
+    <div class="container">
+      <div class="card add-card" title="Add New Card">+</div>
+    </div>
+  </body>
 </html>
